--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,19 @@
 
 buildscript {
     repositories {
-        maven {
-            url "http://maven.oa.com/nexus/content/repositories/android"
-        }
-        maven {
-            url "http://maven.oa.com/nexus/content/repositories/thirdparty"
-        }
-        maven {
-            url "http://maven.oa.com/nexus/content/repositories/thirdparty-snapshots"
-        }
-        //jcenter()
+//        maven {
+//            url "http://maven.oa.com/nexus/content/repositories/android"
+//        }
+//        maven {
+//            url "http://maven.oa.com/nexus/content/repositories/thirdparty"
+//        }
+//        maven {
+//            url "http://maven.oa.com/nexus/content/repositories/thirdparty-snapshots"
+//        }
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,15 +23,15 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url "http://maven.oa.com/nexus/content/repositories/android"
-        }
-        maven {
-            url "http://maven.oa.com/nexus/content/repositories/thirdparty"
-        }
-        maven {
-            url "http://maven.oa.com/nexus/content/repositories/thirdparty-snapshots"
-        }
-       // jcenter()
+//        maven {
+//            url "http://maven.oa.com/nexus/content/repositories/android"
+//        }
+//        maven {
+//            url "http://maven.oa.com/nexus/content/repositories/thirdparty"
+//        }
+//        maven {
+//            url "http://maven.oa.com/nexus/content/repositories/thirdparty-snapshots"
+//        }
+       jcenter()
     }
 }
